Added basic file and user functions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Set the minimum required CMake version
 cmake_minimum_required(VERSION 3.12)
-project(calculatorapp)
+project(fitness_managemnet_app)
 
 set(ROOT src)
 
@@ -39,19 +39,16 @@ set(CRYPTOPP_INSTALL ON)
 set(CRYPTOPP_BUILD_SHARED OFF)
 set(CRYPTOPP_USE_MASTER_BRANCH FALSE)
 
-option(ENABLE_UTILITY "Enable Utility Module" ON)
-option(ENABLE_CALCULATOR "Enable Calculator Module" ON)
-option(ENABLE_CALCULATOR_APP "Enable Calculator Application" ON)
-option(ENABLE_TESTS "Enable All Tests" ON)
+option(ENABLE_FITNESS_LIB "Enable Calculator Module" ON)
+option(ENABLE_FITNESS_APP "Enable Calculator Application" ON)
+option(ENABLE_FITNESS_TEST "Enable All Tests" ON)
 
 # Configure tests
-add_compile_definitions(ENABLE_UTILITY_TEST)
-add_compile_definitions(ENABLE_CALCULATOR_TEST)
+add_compile_definitions(ENABLE_FITNESS_TEST)
 
 
 # Configure logs
-add_compile_definitions(ENABLE_UTILITY_LOGGER)
-add_compile_definitions(ENABLE_CALCULATOR_LOGGER)
+add_compile_definitions(ENABLE_FITNESS_LOGGER)
 
 # Set the output directories for Debug and Release configurations
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/build/Debug)
@@ -95,23 +92,15 @@ endif()
 
 
 
-# Utility submodule
-if(ENABLE_UTILITY)
-	add_subdirectory(${ROOT}/utility)
+if(ENABLE_FITNESS_LIB)
+	add_subdirectory(${ROOT}/fitness_managemnet_lib)
 endif()
 
-# Logger submodule
-if(ENABLE_CALCULATOR)
-	add_subdirectory(${ROOT}/calculator)
+if(ENABLE_FITNESS_APP)
+	add_subdirectory(${ROOT}/fitness_managemnet_app)
 endif()
 
-# BigInteger for Crypto submodule
-if(ENABLE_CALCULATOR_APP)
-	add_subdirectory(${ROOT}/calculatorapp)
-endif()
-
-# Tests
-if(ENABLE_TESTS)
+if(ENABLE_FITNESS_TEST)
 	add_subdirectory(${ROOT}/tests)
 endif()
 
